# second_homework

./: .gitignore  Dockerfile  README.md  docker-compose.yml  load_model.py  pyproject.toml  settings.json
src/: config.py
src/application/: app.py  routers.py  utils.py
tests/: test_prediction.py
