[tool.poetry]
name = "flask&docker"
version = "0.1.0"
description = ""
authors = ["Daniil Serov <zendrokalash1313@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^2.3.2"
pandas = "^2.0.1"
catboost = "^1.2"
sklearn = "^0.0.post5"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
