[tool.poetry]
name = "flask&docker"
version = "0.1.0"
description = ""
authors = ["Daniil Serov <zendrokalash1313@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^2.0.1"
catboost = "^1.2"
seaborn = "^0.12.2"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
uuid = "^1.30"
toml = "^0.10.2"
scikit-learn = "^1.2.2"
dynaconf = "^3.1.12"
loguru = "^0.7.0"
gdown = {extras = ["no-cache-dir"], version = "^4.7.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
